# khulnasoft-lab-_-dynlint

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  update_dependencies.yml  update_supply_chain.yml
cargo-dynlint/: Cargo.toml
cargo-dynlint/fixtures/depinfo_dynlint_libs/: Cargo.toml
cargo-dynlint/fixtures/no_deps/: Cargo.toml
cargo-dynlint/src/: main.rs
cargo-dynlint/tests/: boundary_toolchains.rs  custom_toolchain.rs  depinfo_dynlint_libs.rs  dynlint.rs  dynlint_driver_path.rs  fix.rs  list.rs  metadata.rs  nightly_toolchain.rs  no_deps.rs  package_options.rs  supply_chain.json  warn.rs
cargo-dynlist/src/: main.rs
completions/: dynlint
docs/: how_dynlint_works.md
driver/: Cargo.toml  README.md
driver/src/: lib.rs
dynlint/: Cargo.toml  README.md  build.rs
dynlint-link/: Cargo.toml  README.md  build.rs
dynlint-link/src/: main.rs
dynlint/src/: driver_builder.rs  error.rs  lib.rs  metadata.rs  toml.rs
dynlint/src/name_toolchain_map/: maybe_library.rs  mod.rs
dynlint/src/package_options/: bisect.rs  mod.rs  revs.rs
examples/: Cargo.toml  README.md
examples/experimental/derive_opportunity/: Cargo.toml
examples/experimental/derive_opportunity/src/: lib.rs
examples/experimental/missing_doc_comment_openai/: Cargo.toml  README.md
examples/experimental/missing_doc_comment_openai/src/: lib.rs
examples/general/: Cargo.toml
examples/general/.cargo/: config.toml
examples/general/await_holding_span_guard/: Cargo.toml
examples/general/await_holding_span_guard/src/: lib.rs
examples/general/crate_wide_allow/: Cargo.toml
examples/general/crate_wide_allow/src/: lib.rs
examples/general/env_cargo_path/: Cargo.toml
examples/general/env_cargo_path/src/: lib.rs
examples/general/incorrect_matches_operation/: Cargo.toml
examples/general/incorrect_matches_operation/src/: lib.rs
examples/general/non_local_effect_before_error_return/: Cargo.toml
examples/general/non_local_effect_before_error_return/src/: lib.rs  visit_error_paths.rs
examples/general/non_thread_safe_call_in_test/: Cargo.toml
examples/general/non_thread_safe_call_in_test/src/: blacklist.rs  late.rs  lib.rs
examples/general/src/: lib.rs
examples/general/wrong_serialize_struct_arg/: Cargo.toml
examples/general/wrong_serialize_struct_arg/src/: lib.rs
examples/restriction/assert_eq_arg_misordering/: Cargo.toml
examples/restriction/assert_eq_arg_misordering/src/: lib.rs
examples/restriction/collapsible_unwrap/: Cargo.toml
examples/restriction/collapsible_unwrap/src/: lib.rs
examples/restriction/const_path_join/: Cargo.toml
examples/restriction/const_path_join/src/: lib.rs
examples/restriction/env_literal/: Cargo.toml
examples/restriction/env_literal/src/: lib.rs
examples/restriction/inconsistent_qualification/: Cargo.toml
examples/restriction/inconsistent_qualification/src/: lib.rs
examples/restriction/inconsistent_qualification/ui/: main.rs
examples/restriction/misleading_variable_name/: Cargo.toml
examples/restriction/misleading_variable_name/src/: lib.rs
examples/restriction/overscoped_allow/: Cargo.toml  README.md
examples/restriction/overscoped_allow/src/: lib.rs
examples/restriction/overscoped_allow/ui_test/: main.rs
examples/restriction/question_mark_in_expression/: Cargo.toml
examples/restriction/question_mark_in_expression/src/: lib.rs
examples/restriction/question_mark_in_expression/ui/: clone.rs  clone.stderr
examples/restriction/ref_aware_redundant_closure_for_method_calls/: Cargo.toml
examples/restriction/ref_aware_redundant_closure_for_method_calls/src/: lib.rs
examples/restriction/suboptimal_pattern/: Cargo.toml
examples/restriction/suboptimal_pattern/src/: lib.rs
examples/restriction/try_io_result/: Cargo.toml
examples/restriction/try_io_result/.cargo/: config.toml
examples/restriction/try_io_result/src/: lib.rs
examples/src/: lib.rs
examples/supplementary/: Cargo.toml
examples/supplementary/commented_code/: Cargo.toml
examples/supplementary/commented_code/src/: lib.rs
examples/supplementary/redundant_reference/: Cargo.toml
examples/supplementary/redundant_reference/src/: lib.rs
examples/supplementary/src/: lib.rs
examples/supplementary/unnamed_constant/: Cargo.toml
examples/supplementary/unnamed_constant/src/: lib.rs
examples/supplementary/unnecessary_borrow_mut/: Cargo.toml
examples/supplementary/unnecessary_borrow_mut/src/: lib.rs
examples/supplementary/unnecessary_conversion_for_trait/: Cargo.toml
examples/supplementary/unnecessary_conversion_for_trait/src/: lib.rs
examples/testing/clippy/: Cargo.toml
examples/testing/clippy/src/: lib.rs
examples/testing/clippy/tests/: ui.rs
examples/testing/straggler/: Cargo.toml
examples/testing/straggler/.cargo/: config.toml
examples/testing/straggler/src/: lib.rs
internal/: Cargo.toml  README.md
internal/src/: command.rs  env.rs  examples.rs  filename.rs  packaging.rs
internal/template/: Cargo.toml~
internal/template/.cargo/: config.toml
internal/template/src/: lib.rs
scripts/: lint.sh  publish.sh  sync_with_workspace_README.sh  update_versions.sh  upgrade_examples.sh
utils/linting/: Cargo.toml  README.md
utils/linting/src/: lib.rs
utils/linting/tests/: build.rs
utils/testing/: Cargo.toml  README.md
utils/testing/src/: lib.rs  ui.rs
