[package]
name = "dynlint_testing"
version = "2.4.3"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "Utilities for testing Dynlint libraries"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khulnasoft-lab/dynlint"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.18"
compiletest_rs = "0.10"
env_logger = "0.10"
once_cell = "1.18"
regex = "1.10"
serde_json = "1.0"
tempfile = "3.8"

dynlint = { version = "=2.4.3", path = "../../dynlint", default-features = false }
dynlint_internal = { version = "=2.4.3", path = "../../internal" }
