[package]
name = "depinfo_dynlint_libs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"

[workspace]

[workspace.metadata.dynlint]
libraries = [
    { path = "../../../examples/restriction/question_mark_in_expression" },
    { path = "../../../examples/restriction/try_io_result" },
]
