[package]
name = "missing_doc_comment_openai"
version = "2.4.3"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint that suggests doc comments using OpenAI"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "b105fb4c39bc1a010807a6c076193cef8d93c109" }
curl = "0.4"
serde = "1.0"
serde_json = "1.0"

dynlint_linting = { path = "../../../utils/linting" }

[dev-dependencies]
dynlint_testing = { path = "../../../utils/testing" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dynlint]
libraries = [
    { path = "../../general" },
    { path = "../../supplementary" },
    { path = "../../testing/clippy" },
    { path = "../../restriction/*" },
]
