[package]
name = "question_mark_in_expression"
version = "2.4.3"
authors = ["Samuel E. Moelius III <sam@moeli.us>"]
description = "A lint to check for the `?` operator in expressions"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "assign_op"
path = "ui/assign_op.rs"

[[example]]
name = "clone"
path = "ui/clone.rs"

[[example]]
name = "ls"
path = "ui/ls.rs"

[[example]]
name = "non-empty"
path = "ui/non-empty.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "b105fb4c39bc1a010807a6c076193cef8d93c109" }
if_chain = "1.0"

dynlint_linting = { path = "../../../utils/linting" }

[dev-dependencies]
git2 = "0.17"
tempfile = "3.8"

dynlint_testing = { path = "../../../utils/testing" }

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]

[workspace.metadata.dynlint]
libraries = [
    { path = "../../general" },
    { path = "../../supplementary" },
    { path = "../../testing/clippy" },
    { path = "../../restriction/*" },
]
